--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,6 +19,7 @@ jobs:
         shell: python
   run-windows-command:
     runs-on: windows-latest
+    needs: [run-shell-commands]
     steps:
       - name: Directory Powershell
         run: Get-Location
