--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           who-to-greet: Neko
       - name: Log Greeting Time
-        run: echo ${{ steps.greeting.outputs.time }}
+        run: echo "${{ steps.greeting.outputs.time }}"
